--- a/core/templates/matricula.html
+++ b/core/templates/matricula.html
@@ -9,7 +9,7 @@
 
 {% block img_user %}{% endblock %}
 
-{% block title %}Faculdade Impacta - Matricula{% endblock %}
+{% block title %}Matricula{% endblock %}
 
 {% block main %}
     <var class="flag">F</var>
