--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -6,7 +6,7 @@
 
 {% block script_unico %}{% endblock %}
 	   
-{% block title %}Faculdade Impacta - Home{% endblock %}
+{% block title %}Home - Impacta{% endblock %}
 
 {% block main %}
 	<section>
