--- a/core/templates/noticias.html
+++ b/core/templates/noticias.html
@@ -9,13 +9,10 @@
 
 {% block img_user %}{% endblock %}
 
-{% block title %}Faculdade Impacta - Home{% endblock %}
+{% block title %}Noticias - Impacta{% endblock %}
 
 {% block main %}
-	<section>
-		</br>
-		</br>
-		</br>
+	<section class = 'margin'>
 		<h1 class = "conteudo">Notícias</h1>
 		<article class = "conteudo">
 			<h3 class = "conteudo">Batalhas de Robos na Impacta</h3>
