--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -11,7 +11,7 @@
 	<script src="{% block script_unico %}{% endblock %}"></script>
 	<title>{% block title %}{% endblock %}</title>
 </head>
-<body class = 'content'>
+<body>
 	<header class="motherNav">
 		<nav class="menu">
 			<div class = 'menus'>
@@ -19,34 +19,34 @@
 					<img class="img_logo" src="{% static '/' %}img/logo-novo.png" alt="Logo e link para a home" />
 				</a>
 				<nav class = 'menu_extenco'>
-					<a class = 'link' href="cursos.html" title="Cursos"><button class="linkBtn">Cursos</button></a>
-					<a class = 'link' href="noticias.html" title="Notícias"><button class="linkBtn" >Notícias</button></a>
+					<a class = 'link' href="{% url 'cursos' %}" title="Cursos"><button class="linkBtn">Cursos</button></a>
+					<a class = 'link' href="{% url 'noticias' %}" title="Notícias"><button class="linkBtn" >Notícias</button></a>
 				</nav>
 			</div>
 			<div class='menus'>
 				{% if not user.is_authenticated %}
-				<button class="user" title="{% if not user.is_athenticated %}Entre{% else %}Logado{% endif %}">
-					<a href='login.html'>
+				<button class="user" title="Entre">
+					<a href="{% url 'entrar' %}">
 						<img class="img_user" src="{% if not user.is_athenticated %}{% static '/' %}img/img_user.png{% else %}{% static '/' %}img/img_user.png{% endif %}"
 						 alt="Usuario" />
 					</a>
 				</button>
 				{% else %}
 				<div>
-					<button class="user" onclick="login_function()" title="{% if not user.is_athenticated %}Entre{% else %}Logado{% endif %}">
+					<button class="user" onclick="login_function()" title="Logado">
 						<img class="img_user" src="{% if logado == False %}{% static '/' %}img/img_user.png{% else %}{% static '/' %}img/img_user.png{% endif %}"
 						 alt="Usuario" />
 					</button>
 					<nav id="drop_login" class="conteudo_login">
 						{% if user.user_type == 'A' %}
-						<a href='area_aluno.html'>Área do aluno</a>
-						<a href="/logout">Sair</a>
+						<a href="{% url 'aluno' %}">Área do aluno</a>
+						<a href="{% url 'sair' %}">Sair</a>
 						{% elif user.user_type == 'P' %}
-						<a href='area_professor.html'>Área do professor</a>
-						<a href="/logout">Sair</a>
+						<a href="{% url 'professor' %}">Área do professor</a>
+						<a href="{% url 'sair' %}">Sair</a>
 						{% elif user.user_type == 'C' %}
-						<a href='/admin'>Área do coordenador</a>
-						<a href="/logout">Sair</a>
+						<a href="/admin">Área do coordenador</a>
+						<a href="{% url 'sair' %}">Sair</a>
 						{% endif %}
 					</nav>
 				</div>
@@ -56,8 +56,8 @@
 						<img src="{% static '/' %}img/menu_icons_bars.png" class="menu_icon" />
 					</button>
 					<nav id="drop" class="conteudo_menu">
-						<a href="cursos.html" title="Cursos">Cursos</a>
-						<a href="noticias.html" title="Notícias">Notícias</a>
+						<a href="{% url 'cursos' %}" title="Cursos">Cursos</a>
+						<a href="{% url 'noticias' %}" title="Notícias">Notícias</a>
 					</nav>
 				</div>
 			</div>
