--- a/core/templates/cursos.html
+++ b/core/templates/cursos.html
@@ -1,29 +1,19 @@
 {% extends 'base.html' %}
 {% load static %}
-
-{% block estilo_unico %}{% static '/' %}css/cursos.css{% endblock %}
-
+{% block estilo_unico %}{% static '/' %}css/cursos.css{% endblock %} 
 {% block script_unico %}{% endblock %}
-
 {% block login %}{% endblock %}
-
 {% block img_user %}{% endblock %}
-
-{% block title %}Faculdade Impacta - Home{% endblock %}
-
+{% block title %}Cursos - Impacta{% endblock %} 
 {% block main %}
-	<section class = "section margin">
-		<h1 class= "t1 ">Cursos</h1>
- 		<nav class = "cursos">
-				<button class="it"> Análise e Desenvolvimento de Sistemas </button>
-				<button class="it"> Administração </button>
-				<button class="it"> Banco de Dados </button>
-				<button class="it"> Gestão de Tecnologia da Informação </button>
-				<button class="it"> Jogos Digitais </button>
-				<button class="it"> Processos gerenciais </button>
-				<button class="it"> Produção multimídia </button>
-				<button class="it"> Redes de Computadores </button>
-				<button class="it"> Sistemas de Informação </button>
-		</nav>
-	</section>
+<section class = 'margin'>
+	<h1 class="t1 ">Cursos</h1>
+	<nav class="cursos">
+		{% for curso in cursos %}
+		<a class="it" href = "{% url 'pag_curso' sigla=curso.sigla %}">
+			<button class="it">{{ curso }}</button>
+		</a>
+		{% endfor %}
+	</nav>
+</section>
 {% endblock %}
