--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -18,6 +18,6 @@
        </p>
     {% endfor %}
         <button type="submit">Enviar</button>
-        <a class="formLogin" href="recuperar_senha.html">Esqueci a senha.</a>
+        <a class="formLogin" href="{% url 'recuperar_senha' %}">Esqueci a senha.</a>
     </form>
 {% endblock %}
