--- a/core/templates/area_aluno.html
+++ b/core/templates/area_aluno.html
@@ -12,7 +12,8 @@
         <div class="listLinks">
             
             <ul class=flexList>
-                <li class="liLink"><a class="liLink" href="msg_aluno.html">Mensagens</a></li>
+                <li class="liLink"><a class="liLink" href="{% url 'matricula' %}">Matrículas</a></li>
+                <li class="liLink"><a class="liLink" href="{% url 'msg_aluno' %}">Mensagens</a></li>
                 <li class="liLink"><a class="liLink"href="#">Trabalhos</a></li>
                 <li class="liLink"><a class="liLink"href="#">Exercícios</a></li>
             </ul>
