--- a/core/templates/area_professor.html
+++ b/core/templates/area_professor.html
@@ -13,8 +13,7 @@
         <div class="listLinks">
             
             <ul class=flexList>
-                <li class="liLink"><a class="liLink" href="matricula.html">Matrículas</a></li>
-                <li class="liLink"><a class="liLink" href="msg_professor.html">Mensagens</a></li>
+                <li class="liLink"><a class="liLink" href="{% url 'msg_professor' %}">Mensagens</a></li>
                 <li class="liLink"><a class="liLink" href="#">Trabalhos</a></li>
                 <li class="liLink"><a class="liLink" href="#">Exercícios</a></li>
             </ul>
