--- a/core/templates/msg_professor.html
+++ b/core/templates/msg_professor.html
@@ -2,8 +2,10 @@
 {% load static %}
 {% block conteudoProf %}
 <div class="maxWidth">
-    <div>
-        <div class="flexForm">
+    <fieldset class="flexFieldSet">
+    <legend>Filtrar Mensagens</legend>
+        <form class="flexForm" method="POST">
+        {% csrf_token %}
             <div class="inputGroup">
                 <label for="filtroCurso">Curso: </label>
                 <select class="informs" name="filtroCurso" id="filtrCurso">
@@ -21,7 +23,8 @@
                 </select>
                 <button type="button" class="submitBtn" onclick="filtrarAlunos()">Filtrar</button>
             </div>
-        </div>
+        </form>
+    </fieldset>
         <div class="msgPanel">
         {% for a,desc in alunos.items %}
             <div class="msg">
@@ -31,8 +34,9 @@
             </div>
         {% endfor %}
         </div>
-    </div>
+    
     <fieldset class="flexFieldSet">
+    <legend>Enviar Mensagens</legend>
         <form class="flexForm" method="POST">
             {% csrf_token %}
             <input type="hidden" name="ra_remetente" value="ra_remetente"></input>
