--- a/core/static/css/site.css
+++ b/core/static/css/site.css
@@ -1,58 +1,105 @@
+
+/* base.html */
+html {
+	font-family: arial;
+}
 * {
 	box-sizing: border-box;
+}
+
+.content{
+	display:flex;
+	flex-flow: column wrap;
+	align-items: center;
+	margin-top:1.1em;
+	width:98%;
+}
+.maxHeight{
+	height:max-content;
+}
+.maxWidth{
+	width:80%;
+}
+li.show{
+	display:block;
+}
+.corpo {
 	margin: 0px;
 }
-html {
-	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-}
-.content{margin-top: 1em;}
-.drop_menu, .dropbtn{
-	display: none;
-}
-.menus, .menu_extenco{
+/* mother nav*/
+.motherNav{
 	display: flex;
-	justify-content: space-between;
+	flex-flow: column wrap;
+	align-items: flex-end;
 }
+/* nav */
+.menu {
+	display: flex;
+	flex-flow: row;
+	justify-content:space-between;
+	align-content: center;
+	background-color:#2a3c4a;
+	position: fixed;
+	width: 100%;
+	top: -1px;
+	left: -1px;
+	right: -1px;
+	z-index: 1;
+	opacity: 0.88;
+}
+.img_logo {
+	width: 10em;
+	height: 3em;
+	padding-top: 0.5em;
+	padding-left: 2em;
+	margin-bottom: 0.2em;
+}
+
 .linkBtn{
 	display: flex;
 	justify-content: center;
 	height:100%;
-	width:6em;
-}
-.link{	text-decoration: none;
-}
-.img_logo {
-	width: 12em;
-	height: 3.6em;
-}
-.img_user, .menu_icon {
-	width: 3em;
-	height: 3em;
-	margin: 0.5em;
-}
-.user, .dropbtn, .logo, .linkBtn {
-	width: 5em;
-	height: 4.5em;
+	width:10em;
+	color: #FFFFFF;
+	font-weight: bold;
 	background-color: #2a3c4a;
 	border: 0px black solid
 }
-.linkBtn{
-	width: 9em; 
-	color: #FFFFFF;
-	font-weight: bold;
-}
+
 .dropbtn:hover, .user:hover, .linkBtn:hover {
 	background-color: #23313c;
+	transition: 0.3s;
 	box-shadow: 0 5px 5px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 .dropbtn:focus, .user:focus, .linkBtn:focus {
 	border: 0 none;
 	outline: 0;
 }
-.drop_menu, drop_login {
-    position: relative;
-    display: inline-block;
+a.link {
+	display: flex;
+	text-decoration: none;
+	height: 100%;
+	font-weight: bold;
 }
+a.link:link, a.link:visited {
+	color: #ffffff;
+}
+
+a.link:active {
+	color: #7b7bff;
+}
+
+.menus, .menu_extenco{
+	display: flex;
+	flex-flow: row;
+	justify-content: space-between;
+}
+
+.drop_menu, .dropbtn{
+	display: none;
+}
+
+/* box de login */
 .conteudo_menu, .conteudo_login {
     display: none;
     position: absolute;
@@ -61,37 +108,107 @@ html {
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
-.conteudo_menu a, .conteudo_login a {
-    color: #ffffff;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
+.drop_login{
+	display:flex;
+	position: relative;
+	flex-flow: column;
+	width:100%;
+	background-color: rgba(0, 0, 0, 0);	
 }
-.show {
-	display:block;
-}
-nav.menu {
+.user{
 	display: flex;
-	justify-content:space-between;
-	background-color:#2a3c4a;
-	position: fixed;
-	width: 100%;
-	top: -1px;
-	left: -1px;
-	right: -1px;
-	z-index: 1;
-	padding: 0.4em;
-	padding-right: 2em;
-	padding-left: 2em;
+	align-self: flex-end;
+	width:4em;
+	height:4em;
+	background-color: #2a3c4a;
+	border:none;
 }
-.redes_impacta {text-decoration: none;}
-.show{display: block;}
+.img_user{
+	width:100%;
+	height:100%;
+	margin:0.2em;
+}
+.conteudo_login{
+	display:flex;
+	position:absolute;
+	top:107%;
+	justify-content: center;
+	z-index:1;
+	background-color: #4e5b60;
+	width:100%;
+}
+
+/* Forms */
+
+.flexFieldSet{
+	display:flex;
+	flex-flow:column wrap;
+	align-items: center;
+	align-content: space-between;
+	background-color: #d0d0d0;
+	margin-top: 1em;
+	width:98%;
+	height: max-content;
+	margin-bottom: 1em;
+	border: none;
+}
+
+.flexForm{
+	display:flex;
+	flex-flow:column wrap;
+	align-items: center;
+	background-color: #d0d0d0;
+	margin-top: 1em;
+	width:100%;
+	margin-bottom: 1em;
+}
+.inputGroup{
+	display:flex;
+	justify-content: space-between;
+	align-items: center;
+	align-content: center;
+	margin-top:1em;
+	margin-bottom:1em;
+	color: black;
+	font-weight: bold;
+	width:100%;
+}
+.informs{
+	width:95%;
+	height:2em;
+	border:none;
+	border-radius:5px;
+}
+
+.inputTextArea{
+	width:90%;
+	border:none;
+	height: 10em;
+	max-width: 900px;
+}
+
+.submitBtn{
+	display: flex;
+	justify-content: center;
+	height:2em;
+	width:6em;
+	color: #FFFFFF;
+	font-weight: bold;
+	background-color: #2a3c4a;
+	border: none;
+}
+.btnLogin{
+	margin-top:1.3em;
+	border-radius: 10px;
+	font-size: 70%;
+	width:40%;
+}
+
 footer {
 	background-color:#e4e4e4;
 	bottom: 0; 
 	width: 100%;
-	position: relative;
-	padding: 0.4em;
+	height: 30%;
 }
 div.sigaImpacta {
 	width: 10em; 
@@ -104,7 +221,9 @@ h3.sigaImpacta {
 	padding-right: 0.7em;
 	-webkit-margin-after: 0.3em;
 }
-nav.siga {margin-bottom:1em;}
+nav.siga {
+	margin-bottom:1em;
+}
 div.copyright {
 	margin: 1em;
 	background-color: #c1c1c1;
@@ -112,10 +231,250 @@ div.copyright {
 	justify-content: center;
 	text-align: center;
 }
-@media only screen and (min-width: 320px) and (max-width: 736px)
-{
-	div.sigaImpacta {padding-top: 1em;}
-	.drop_menu, .dropbtn{display: block;}
-	.menu_extenco{display: none;}
-	.content{margin-top: 4.5em;}
+@media only screen and (min-width: 320px) and (max-width: 736px){
+	h3.sigaImpacta {
+		display: none;
+	}
+	div.sigaImpacta {
+		padding-top: 1em;
+	}
+	.img_logo {
+	width: 6em;
+	height: 2em;
+	padding-top: 0.25em;
+	padding-left: 1em;
+	margin-bottom: 0.1em;
+	}
+
+	a.link {
+	display: flex;
+	text-decoration: none;
+	font-weight: bold;
+	}
+
+	.user{
+	display: flex;
+	align-self: flex-end;
+	width:4em;
+	height:4em;
+	margin:0.2em;
+	background-color: #2a3c4a;
+	border:none;
+	}
+
+	.menu_extenco{
+		width:80%;
+	}
+
+	.linkBtn{
+		width:5em;
+	}
+}
+/* index.html */
+.Banner {
+	position:relative;
+	width: 100%;
+}
+.BannerCell {
+	display: block;
+	position: relative;
+	width: 100%;
+	margin-top: 3.53em;
+}
+.img_banner {
+	margin-top: 3.53em;
+}
+article.sobre {
+	display: flex;
+	align-items: center;
+	flex-flow: column wrap;
+}
+h1.sobre {
+	display: flex;
+	
+}
+p.sobre {
+	display: flex;
+	width:50%;
+	border-bottom: 1px solid black;
+	padding-bottom: 0.3em;
+	text-align: justify;
+}
+article.comentsAlunos {
+	display: grid;
+	grid-template: 10% 10% 35% 10% 35% / 1fr;
+	margin: 1em;
+	margin-top: 0em;
+	text-align: justify;
+}
+h2.comentsAlunos, h3.comentsAlunos {
+	text-align: center;
+	color: #676f7c;
+}
+h3.comentsAlunos {
+	color: #474747;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 736px){
+	article.sobre {
+		display: flex;
+		align-items: center;
+		flex-flow: column wrap;
+	}
+	
+}
+
+/* Area do Aluno */
+.areaAluno{
+	display:flex;
+	justify-content: space-between;
+	align-content: flex-start;
+	position:relative;
+	width:100%;
+	top:50px;
+	padding-top:2em;
+}
+.listLinks{
+	display:flex;
+	width:max-content;
+	height: min-content;
+	flex-flow:column wrap;
+	background-color: #9c9c9c;
+	border-top-right-radius: 30px;
+	border-bottom-right-radius: 30px;
+}
+.flexList{
+	display:flex;
+	flex-flow:column wrap;
+	justify-content: space-around;
+	margin:1em;
+	padding: 0px;
+}
+.liLink{
+	list-style: none;
+	font-family: arial;
+	font-size: 1.2em;
+	color:#ffffff;
+	font-weight: bold;
+	text-decoration: none;
+	line-height: 1.4em;
+	margin-right: 0.5em;
+	border-top-right-radius: 30px;
+	border-bottom-right-radius: 30px;
+}
+.liLink:hover{
+	background-color: #757575;
+}
+.msgPanel{
+	display: flex;
+	flex-flow: column;
+	justify-content: flex-start;
+	width:98%;
+	height:max-content;
+	max-height: 250px;
+	background-color: lightgrey;
+	margin-bottom: 5em;
+	overflow: scroll;
+}
+.msg{
+	display:flex;
+	flex-flow:column;
+	width:95%;
+	margin-left: 1em;
+	padding-left: 1em;
+	min-height: min-content;
+	border-bottom: 1px solid black;
+	background-color: white;
+}
+.remetente{
+	font-weight: bold;
+}
+.texto{
+	margin-left:5px;
+}
+@media only screen and (min-width: 320px) and (max-width: 736px){
+
+.areaAluno{
+	display:flex;
+	flex-flow: column nowrap;
+	justify-content: space-between;
+	align-content: flex-start;
+	position:relative;
+	width:100%;
+	top:10px;
+	padding-top:2em;
+}
+.listLinks{
+	display:flex;
+	min-width:min-content;
+	height: min-content;
+	flex-flow:column wrap;
+	background-color: #757575;
+}
+
+.flexList{
+	display:flex;
+	flex-flow:row wrap;
+	justify-content: space-around;
+}
+
+.liLink{
+	display:flex;
+	list-style: none;
+	font-family: arial;
+	font-size: 1em;
+	color:#ffffff;
+	font-weight: bold;
+	text-decoration: none;
+	line-height: 1em;
+}
+
+
+.msgPanel{
+	display: flex;
+	justify-content: center;
+	width:95%;
+	height:22em;
+	background-color: lightgrey;
+	margin-top: 1em;
+	margin-bottom: 2em;
+}
+
+}
+
+/* area do professor */
+
+.areaProf{
+	display:flex;
+	justify-content: space-between;
+	align-content: flex-start;
+	position:relative;
+	width:100%;
+	top:10px;
+	padding-top:2em;
+}
+
+/* Matricula */
+.dropdownList{
+	flex-flow: column wrap;
+}
+.selectionBox{
+	position: relative;
+	width:100%;
+	height:max-content;
+	border-radius: 5px 5px 0px 0px;
+	background-color: #ffffff;
+}
+.selectionList{
+	display:none;
+	position: relative;
+	z-index:1;
+	height: max-content;
+	width:100%;
+	border-radius: 0px 0px 5px 5px;
+	background-color: #ffffff;
+}
+
+.left{
+	align-items: flex-start;
 }
