--- a/core/templates/area_aluno.html
+++ b/core/templates/area_aluno.html
@@ -1,8 +1,7 @@
 {% extends 'base.html' %}
-
 {% load static %}
 
-{% block estilo_unico %}{% static '/' %}css/a_aluno.css{% endblock %}
+{% block estilo_unico %}{% static '/' %}css/site.css{% endblock %}
 
 {% block script_unico %}{% endblock %}
 	   
@@ -11,22 +10,14 @@
 {% block main %}
 <section class="areaAluno">
     <div class="listLinks">
-        <ul>
-            <li class="liLink"><a class="liLink" href="mensagem.html">Mensagens</a></li>
+        
+        <ul class=flexList>
+            <li class="liLink"><a class="liLink" href="{% url 'matricula' %}">Matrículas</a></li>
+            <li class="liLink"><a class="liLink" href="{% url 'msg_aluno' %}">Mensagens</a></li>
             <li class="liLink"><a class="liLink"href="#">Trabalhos</a></li>
             <li class="liLink"><a class="liLink"href="#">Exercícios</a></li>
         </ul>
     </div>
-
-    <div class="msgPanel">
-        <div class="msg">
-            <p class="remetente">{{ user.nome }}</p>
-            <p id="texto">mensagem modelo trolololololo</p>
-            <span id="data">{{ data_agora }}</span>
-        </div>
-        <form method = 'POST'>
-            <label for = 'msg'>Mensagem</label><textarea name = 'mensagem' id = 'msg' rows = '5' placeholder = "Digite sua mensagem aqui!"></textarea>
-        </form>
-    </div>
+    {% block conteudoAluno %}{% endblock %}
 </section>
 {% endblock %}
