--- a/core/templates/area_professor.html
+++ b/core/templates/area_professor.html
@@ -2,11 +2,22 @@
 
 {% load static %}
 
-{% block estilo_unico %}{% static '/' %}css/a_prof.css{% endblock %}
+{% block estilo_unico %}{% static '/' %}css/site.css{% endblock %}
 
 {% block script_unico %}{% endblock %}
 	   
 {% block title %}Faculdade Impacta - Home{% endblock %}
 
 {% block main %}
+    <section class="areaProf">
+        <div class="listLinks">
+            
+            <ul class=flexList>
+                <li class="liLink"><a class="liLink" href="{% url 'msg_professor' %}">Mensagens</a></li>
+                <li class="liLink"><a class="liLink" href="#">Trabalhos</a></li>
+                <li class="liLink"><a class="liLink" href="#">Exercícios</a></li>
+            </ul>
+        </div>
+        {% block conteudoProf %}{% endblock %}
+    </section>
 {% endblock %}
