--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -7,7 +7,7 @@
 	<link rel="icon" href="{% static '/' %}img/icone.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="{% static '/' %}css/site.css" />
 	<link rel="stylesheet" href='{% block estilo_unico %}{% endblock %}' />
-	<script src="{% static '/' %}src/script.js"></script>
+	<script src="{% static '/' %}js/script.js"></script>
 	<script src="{% block script_unico %}{% endblock %}"></script>
 	<title>{% block title %}{% endblock %}</title>
 </head>
