--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -9,7 +9,7 @@
 {% block title %}Login{% endblock %}
 
 {% block main %}
-<fieldset class="flexFieldSet">
+<fieldset class="flexFieldSet thirdWidth">
     <form class="flexForm" method="POST">
     {% csrf_token %}
     {% for field in form %}
@@ -18,7 +18,7 @@
         {{ field.label_tag }} {{ field }}
     </p>
     {% endfor %}
-        <button type="submit" class="linkBtn">Enviar</button>
+        <button type="submit" class="linkBtn">Entrar</button>
         <a href="recuperar_senha.html">Esqueci a senha</a>
     </form>
 </fieldset>
