--- a/core/static/css/matricula.css
+++ b/core/static/css/matricula.css
@@ -1,6 +1,23 @@
-section {
-	display: flex;
-	flex-wrap: wrap;
-    justify-content: center;
-    margin: 10em;
+.dropdownList{
+	flex-flow: column wrap;
+}
+.selectionBox{
+	position: relative;
+	width:100%;
+	height:max-content;
+	border-radius: 5px 5px 0px 0px;
+	background-color: #ffffff;
+}
+.selectionList{
+	display:none;
+	position: relative;
+	z-index:1;
+	height: max-content;
+	width:100%;
+	border-radius: 0px 0px 5px 5px;
+	background-color: #ffffff;
+}
+
+.left{
+	align-items: flex-start;
 }
