--- a/core/templates/area_aluno.html
+++ b/core/templates/area_aluno.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block estilo_unico %}{% static '/' %}css/site.css{% endblock %}
+{% block estilo_unico %}{% static '/' %}css/a_aluno.css{% endblock %}
 
 {% block script_unico %}{% endblock %}
 	   
