--- a/core/static/css/home.css
+++ b/core/static/css/home.css
@@ -1,15 +1,10 @@
-* {
-	box-sizing: border-box;
-}
+.content{margin-top: 4.5em;}
 .Banner {
 	position:relative;
 	width: 100%;
 }
 .BannerCell {
 	display: none;
-}
-.img_banner {
-	margin-top: 3.53em;
 }
 article.sobre {
 	display: grid;
@@ -53,6 +48,7 @@ h3.comentsAlunos {
 }
 @media only screen and (min-width: 320px) and (max-width: 736px)
 {
+	.content{margin-top: 1em;}
 	article.sobre {
 		display: grid;
 		grid-template: 10% 1fr 10% / 5% 90% 5%; 
