--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -8,10 +8,9 @@
 	<link rel="stylesheet" href="{% static '/' %}css/site.css" />
 	<link rel="stylesheet" href='{% block estilo_unico %}{% endblock %}' />
 	<script src="{% static '/' %}js/script.js"></script>
-	<script src="{% block script_unico %}{% endblock %}"></script>
 	<title>{% block title %}{% endblock %}</title>
 </head>
-<body class="content">
+<body>
 	<header class="motherNav">
 		<nav class="menu">
 			<div class = 'menus'>
@@ -25,16 +24,16 @@
 			</div>
 			<div class='menus'>
 				{% if not user.is_authenticated %}
-				<button class="user" title="{% if not user.is_authenticated %}Entre{% else %}Logado{% endif %}">
+				<button class="user" title="Entre">
 					<a href="{% url 'entrar' %}">
-						<img class="img_user" src="{% if not user.is_athenticated %}{% static '/' %}img/img_user.png{% else %}{% static '/' %}img/img_user.png{% endif %}"
+						<img class="img_user" src="{% static '/' %}img/img_user.png"
 						 alt="Usuario" />
 					</a>
 				</button>
 				{% else %}
 				<div>
-					<button class="user" onclick="login_function()" title="{% if not user.is_athenticated %}Entre{% else %}Logado{% endif %}">
-						<img class="img_user" src="{% if logado == False %}{% static '/' %}img/img_user.png{% else %}{% static '/' %}img/img_user.png{% endif %}"
+					<button class="user" onclick="login_function()" title="Logado">
+						<img class="img_user" src="{% static '/' %}img/img_user.png"
 						 alt="Usuario" />
 					</button>
 					<nav id="drop_login" class="conteudo_login">
@@ -63,7 +62,7 @@
 			</div>
 		</nav>
 	</header>
-	<main class='content'>
+	<main>
 		{% block main %}{% endblock %}
 	</main>
 	<footer>
