--- a/core/templates/cursos.html
+++ b/core/templates/cursos.html
@@ -10,7 +10,7 @@
 	<h1 class="t1 ">Cursos</h1>
 	<nav class="cursos">
 		{% for curso in cursos %}
-		<a class="it" href = "{% url 'pag_curso' sigla=curso.sigla %}">
+		<a class="it" href = "{% url 'pag_curso' sigla=curso.sigla_curso %}">
 			<button class="it">{{ curso }}</button>
 		</a>
 		{% endfor %}
