--- a/core/templates/noticias.html
+++ b/core/templates/noticias.html
@@ -23,7 +23,7 @@
 			cheia de emoção, tecnologia e aprendizado, em que o objetivo era  
 			estourar o balão do robô do adversário. </br>
 			#EuSouImpacta #AtitudeImpacta #FaculdadeImpacta #InternetDasCoisas #InternetOfThings #IOT</p>	
-			<img class = "Banner imagem" src="{% static '/' %}img\img2.jpeg" alt = "Batalha de robos da impacta"/></a>
+			<img class = "imagem" src="{% static '/' %}img\img2.jpeg" alt = "Batalha de robos da impacta"/></a>
 
 			<h3 class = "conteudo">Perfil comportamental: o que é e os benefícios de usá-lo na sua empresa.</h3>
 			<p class = "conteudo" >Cada pessoa é única e possui sua própria forma de agir nas mais variadas situações. 
@@ -36,7 +36,7 @@
 			na empresa — ou melhor, é preciso saber identificar o perfil de cada 
 			colaborador para definir em quais funções eles se adéquam mais.</p>
 		</article>
-		<img class = "Banner imagem" src="{% static '/' %}img\img3.jpg" alt = "estudo alguns alunos estudando"/></a>
+		<img class = "imagem" src="{% static '/' %}img\img3.jpg" alt = "estudo alguns alunos estudando"/></a>
 	</section>
 {% endblock %}
 
