--- a/core/static/css/site.css
+++ b/core/static/css/site.css
@@ -8,7 +8,6 @@ html {
 }
 .drop_menu, .dropbtn{
 	display: none;
-
 }
 .motherNav{
 	display: flex;
@@ -58,12 +57,12 @@ html {
 .drop_menu, drop_login {
     position: relative;
     display: inline-block;
-
 }
 .conteudo_menu, .conteudo_login {
-	display:flex;
-	flex-flow: column;
-	background-color: #344a5b;
+    display: none;
+    position: absolute;
+    background-color: #344a5b;
+    min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
@@ -125,6 +124,7 @@ div.copyright {
 	.menu_extenco{display: none;}
 	.content{margin-top: 4.5em;}
 }
+
 .flexFieldSet{
 	display:flex;
 	flex-flow:column wrap;
@@ -139,6 +139,7 @@ div.copyright {
 	margin-top: 5em;
 	border-radius: 2em;
 }
+
 .flexForm{
 	display:flex;
 	flex-flow:column wrap;
@@ -165,12 +166,14 @@ div.copyright {
 	border:none;
 	border-radius:5px;
 }
+
 .inputTextArea{
 	width:90%;
 	border:none;
 	height: 10em;
 	max-width: 900px;
 }
+
 .submitBtn{
 	display: flex;
 	justify-content: center;
