--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,6 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width = device-width, initial-scale = 1.0" />
@@ -13,43 +14,54 @@
 <body>
 	<header class="motherNav">
 		<nav class="menu">
-			<div class = 'menus'>
+			<div class='menus'>
 				<a href="/" title="Logo Faculdade Impacta">
 					<img class="img_logo" src="{% static '/' %}img/logo-novo.png" alt="Logo e link para a home" />
 				</a>
-				<nav class = 'menu_extenco'>
-					<a class = 'linkBtn' href="{% url 'cursos' %}" title="Cursos"><button class="linkBtn">Cursos</button></a>
-					<a class = 'linkBtn' href="{% url 'noticias' %}" title="Notícias"><button class="linkBtn" >Notícias</button></a>
+				<nav class='menu_extenco'>
+					<a class='link' href="{% url 'cursos' %}" title="Cursos">
+						<button class="linkBtn">Cursos</button>
+					</a>
+					<a class='link' href="{% url 'noticias' %}" title="Notícias">
+						<button class="linkBtn">Notícias</button>
+					</a>
 				</nav>
 			</div>
 			<div class='menus'>
 				{% if not user.is_authenticated %}
 				<button class="user" title="Entre">
 					<a href="{% url 'entrar' %}">
-						<img class="img_user" src="{% static '/' %}img/img_user.png"
-						 alt="Usuario" />
+						<img class="img_user" src="{% static '/' %}img/img_user.png" alt="Usuario" />
 					</a>
 				</button>
 				{% else %}
 				<div>
 					<button class="user" onclick="login_function()" title="Logado">
-						<img class="img_user" src="{% static '/' %}img/img_user.png"
-						 alt="Usuario" />
+						<img class="img_user" src="{% static '/' %}img/img_user.png" alt="Usuario" />
 					</button>
 					<nav id="drop_login" class="conteudo_login">
 						{% if user.user_type == 'A' %}
-						<a class="linkBtn" href="{% url 'area_aluno' %}">Área do aluno</a>
-						<a class="linkBtn" href="{% url 'sair' %}">Sair</a>
+						<a href="{% url 'aluno' %}">Área do aluno</a>
+						<a href="{% url 'sair' %}">Sair</a>
 						{% elif user.user_type == 'P' %}
-						<a class="linkBtn" href="{% url 'area_professor' %}">Área do professor</a>
-						<a class="linkBtn" href="{% url 'sair' %}">Sair</a>
+						<a href="{% url 'professor' %}">Área do professor</a>
+						<a href="{% url 'sair' %}">Sair</a>
 						{% elif user.user_type == 'C' %}
-						<a class="linkBtn" href="/admin">Área do coordenador</a>
-						<a class="linkBtn" href="{% url 'sair' %}">Sair</a>
+						<a href="/admin">Área do coordenador</a>
+						<a href="{% url 'sair' %}">Sair</a>
 						{% endif %}
 					</nav>
 				</div>
 				{% endif %}
+				<div class="drop_menu" title="Menu">
+					<button onclick="menu_function()" class="dropbtn">
+						<img src="{% static '/' %}img/menu_icons_bars.png" class="menu_icon" />
+					</button>
+					<nav id="drop" class="conteudo_menu">
+						<a href="{% url 'cursos' %}" title="Cursos">Cursos</a>
+						<a href="{% url 'noticias' %}" title="Notícias">Notícias</a>
+					</nav>
+				</div>
 			</div>
 		</nav>
 	</header>
@@ -83,4 +95,5 @@
 		</div>
 	</footer>
 </body>
+
 </html>
