--- a/core/templates/historico.html
+++ b/core/templates/historico.html
@@ -1,7 +1,7 @@
 {% extends 'area_aluno.html' %}
 {% load static %}
 {% block conteudoAluno %}
-<div class="maxWidth">
+<div class="width80 maxHeight content">
 <fieldset class="flexFieldSet">
         <legend>Histórico</legend>
             <form class="flexForm" method="POST">
