--- a/core/templates/matricula.html
+++ b/core/templates/matricula.html
@@ -13,7 +13,7 @@
             <p>Codigo Inválido</p> 
             </br>
     {% endif %}-->
-<div class="maxWidth">
+<div class="content">
     <fieldset class="flexFieldSet">
     <legend>Criar Matrícula</legend>
         <form class="flexForm" method="POST">
