--- a/core/templates/msg_professor.html
+++ b/core/templates/msg_professor.html
@@ -1,7 +1,7 @@
 {% extends 'area_professor.html' %}
 {% load static %}
 {% block conteudoProf %}
-<div class="maxWidth">
+<div class="width80 maxHeight content">
     <fieldset class="flexFieldSet">
     <legend>Filtrar Mensagens</legend>
         <form class="flexForm" method="POST">
