--- a/core/templates/upload_aluno.html
+++ b/core/templates/upload_aluno.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block conteudoAluno %}
-<div class="maxWidth">
+<div class="width80 maxHeight content">
     <fieldset class="flexFieldSet">
     <legend>Upload de Arquivos</legend>
     <form class="flexForm" method="POST" enctype="multipart/form-data">
