--- a/core/templates/upload_prof.html
+++ b/core/templates/upload_prof.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block conteudoProf %}
-<div class="maxWidth">
+<div class="width80 maxHeight content">
         <fieldset class="flexFieldSet">
         <legend>Upload de Arquivos</legend>
         <form class="flexForm" method="POST" enctype="multipart/form-data">
@@ -25,7 +25,7 @@
                 </select>
     
                 <label for="semestre_ofertado">Semestre: </label>
-                <select  class="informs" name="semestre_ofertado" id="semestre_ofertado">
+                <select  class="informs width20" name="semestre_ofertado" id="semestre_ofertado">
                     {% for sem in turmas.semestre_ofertado %}
                     <option>{{ sem }}</option>
                     {% endfor %}
@@ -33,7 +33,7 @@
                 </select>
     
                 <label for="id_turma">Turma: </label>
-                <select  class="informs" name="id_turma" id="id_turma">
+                <select  class="informs width20" name="id_turma" id="id_turma">
                     {% for turma in turmas.id_turma %}
                     <option>{{ turma }}</option>
                     {% endfor %}
@@ -42,7 +42,7 @@
             </div>
             <div class="inputGroup">
                 <label for="questao">Número da Questão</label>
-                <input class="informs" name="questao" id="questao" type="number"></input>
+                <input class="informs width10" name="questao" id="questao" type="number"></input>
                 <label for="arquivo">Selecionar Arquivo: </label>
                 <div id="arquivo">{{ form.arquivo_questao }}</div>
             </div>
