--- a/core/templates/area_aluno.html
+++ b/core/templates/area_aluno.html
@@ -20,6 +20,7 @@
             </li>
             <li class="liLink"><a class="liLink" href="{% url 'msg_aluno' %}">Mensagens</a></li>
             <li class="liLink"><a class="liLink" href="{% url 'upload_aluno' %}">Trabalhos e Exercícios</a></li>
+            <li class="liLink"><a class="liLink" href="{% url 'boletim' %}">Boletim</a></li>
         </ul>
     </div>
     {% block conteudoAluno %}{% endblock %}
